:sparkles: add emoji fonts

--- a/PlayerList.csproj
+++ b/PlayerList.csproj
@@ -50,6 +50,10 @@
       <HintPath>libs/runtime/Hexa.NET.ImGui.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="HexaGen.Runtime">
+      <HintPath>libs/runtime/HexaGen.Runtime.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
 
     <!-- Add game libs -->
     <Reference Include="Assembly-CSharp">
