--- a/PlayerList.csproj
+++ b/PlayerList.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>com.aeryle.playerlist</AssemblyName>
     <Product>PlayerList</Product>
-    <Version>0.1.0-alpha</Version>
+    <Version>1.0.1</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RestoreAdditionalProjectSources>
